# libbionetio

./: CMakeLists.txt  README.md
include/: BioNetIOXML.h  CommonClass.h
src/: BioNetIOXML.cpp  main.cpp
